Fix: /stream works on smaller resolutions.

--- a/css/stream.css
+++ b/css/stream.css
@@ -1,3 +1,7 @@
+body {
+    min-height: 800px;
+}
+
 #stream {
     display: block;
     position: fixed;
